# vending-machines

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  app.py  config.py  coverage.xml  database.dbml  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties  test.txt  tox.ini  vending-machines.yaml
.github/workflows/: build.yml  python-tests.yml
app/: __init__.py  extensions.py
app/machine_stock/: __init__.py
app/main/: routes.py
app/models/: machine_stock.py  product.py  stock_timeline.py  vending_machine.py
app/product/: __init__.py  routes.py
app/utils/: result.py
app/vending_machine/: __init__.py  routes.py
tests/: conftest.py  test_product_routes.py  test_vending_machine_routes.py
vending_machines/: app.py  config.py  machine_stock.py  product.py  vending_machine.py
vending_machines/app/: __init__.py
vending_machines/app/machine_stock/: __init__.py  machine_stock.py
vending_machines/app/models/: __init__.py  machine_stock.py  product.py  vending_machine.py
vending_machines/app/product/: __init__.py  product.py  routes.py
vending_machines/app/vending_machine/: __init__.py  routes.py  vending_machine.py
